--- a/scss/pages/_reservas.scss
+++ b/scss/pages/_reservas.scss
@@ -1,204 +1,155 @@
 .main-reservas {
-  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+
+  .titulo-reservas {
+    text-align: center;
+    color: nth($list: $colores, $n: 1);
+    padding-bottom: 0.5rem;
+    margin-top: 1rem;
+    border-bottom: 2px solid nth($list: $colores, $n: 1);
+    margin-bottom: 0.5rem;
+  }
+
   .form-container {
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    gap: 0.7rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
 
-    .titulo-reservas {
-      text-align: center;
-      color: nth($list: $colores, $n: 1);
-      padding-bottom: 0.5rem;
-      margin-top: 1rem;
-      border-bottom: 2px solid nth($list: $colores, $n: 1);
-      margin-bottom: 0.5rem;
-    }
-
-    .form-datos {
+    .formulario {
       display: flex;
-      margin: 2rem 0;
+      flex-direction: column;
+      gap: 1rem;
+      width: 50%;
+      padding: 2rem 1rem;
+      color: white;
+      background-color: nth($list: $colores, $n: 1);
+      box-shadow: 0px 0px 30px 0px nth($list: $colores, $n: 4);
+      border-radius: 20px;
 
-      .formulario {
-        justify-items: center;
-        align-items: center;
-        background-color: nth($list: $colores, $n: 1);
-        box-shadow: 0px 0px 30px 0px nth($list: $colores, $n: 4);
-        width: 70%;
-        padding: 2rem;
-        gap: 0.7rem;
-        border-radius: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-          "titulo titulo"
-          "desde hasta"
-          "menores adultos"
-          "nombre apellido"
-          "tel email"
-          "textarea textarea"
-          "submit submit";
+      .formulario-bloque {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        gap: 1rem;
 
-        .form-reserva {
-          font-size: 15px;
-          text-align: center;
-          font-weight: bold;
-          color: nth($list: $colores, $n: 3);
-          margin: 10px;
-        }
+        .input-columna {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
 
-        .nombre,
-        .apellido,
-        .tel,
-        .email {
-          .form-reserva {
-            text-align: left;
-          }
-        }
+          .input-bloque {
+            display: flex;
+            flex-direction: column;
 
-        .desde,
-        .hasta {
-          input[type="date"] {
-            &::-webkit-calendar-picker-indicator {
+            input {
+              background-color: transparent;
+            }
+
+            .fecha-personas {
+              width: 9rem;
+              height: 2rem;
+              text-transform: uppercase;
+              text-align: center;
+              border-radius: 5px;
+              font-size: 13px;
+              padding: 1rem;
+              border: 1px solid nth($list: $colores, $n: 3);
               color: nth($list: $colores, $n: 3);
+
+              &:hover {
+                color: nth($list: $colores, $n: 1);
+                background-color: nth($list: $colores, $n: 2);
+              }
+            }
+
+            .datos-personales {
+              width: 13rem;
+              height: 2rem;
+              text-align: left;
+              font-size: 13px;
+              border-style: none;
+              border-bottom: 1px solid nth($list: $colores, $n: 3);
+              padding-left: 0.7rem;
+              background-color: transparent;
+
+              &:hover {
+                color: nth($list: $colores, $n: 1);
+                background-color: nth($list: $colores, $n: 2);
+              }
+            }
+
+            p {
+              margin-bottom: 0;
             }
           }
         }
+      }
 
-        .desde,
-        .hasta,
-        .menores,
-        .adultos {
-          input {
-            border: 1px solid nth($list: $colores, $n: 3);
-            border-radius: 5px;
-            width: 9rem;
-            height: 2rem;
-            text-transform: uppercase;
-            text-align: center;
-            font-size: 13px;
-            padding: 1rem;
-            color: nth($list: $colores, $n: 3);
-            background-color: transparent;
+      .comentario-bloque {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        gap: 0.5rem;
 
-            &:hover {
-              color: nth($list: $colores, $n: 1);
-              background-color: nth($list: $colores, $n: 2);
-            }
-          }
-        }
-
-        .menores,
-        .adultos {
-          input {
-            padding-left: 5px;
-            width: 6rem;
-            height: 2rem;
-          }
-        }
-
-        .nombre,
-        .apellido,
-        .tel,
-        .email {
-          input {
-            border-style: none;
-            border-bottom: 1px solid nth($list: $colores, $n: 3);
-            width: 13rem;
-            height: 2rem;
-            font-size: 13px;
-            text-align: left;
-            padding-left: 0.7rem;
-            background-color: transparent;
-
-            &:hover {
-              color: nth($list: $colores, $n: 1);
-              background-color: nth($list: $colores, $n: 2);
-            }
-          }
-        }
-
-        .form-10 {
-          grid-column: 1/3;
+        .textarea {
           border-top: 1px solid nth($list: $colores, $n: 3);
           border-bottom: 1px solid nth($list: $colores, $n: 3);
-          width: 90%;
+          background-color: transparent;
           padding: 1rem;
-          margin-top: 0.7rem;
-          textarea {
-            width: 100%;
-            border-style: none;
-            background-color: transparent;
-            color: nth($list: $colores, $n: 3);
-          }
-        }
-
-        .form-11 {
-          grid-column: 1/3;
-          width: 90%;
-          .submit {
-            width: 100%;
-            border-style: none;
-            background-color: nth($list: $colores, $n: 2);
-            color: nth($list: $colores, $n: 1);
-          }
         }
 
         .submit {
-          color: nth($list: $colores, $n: 1);
           height: 2.5rem;
           font-size: 1.3rem;
           font-weight: bold;
-
+          background-color: nth($list: $colores, $n: 2);
+          color: nth($list: $colores, $n: 1);
           &:hover {
             background-color: nth($list: $colores, $n: 3);
-            color: nth($list: $colores, $n: 1);
+          }
+        }
+      }
+      .informacion {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 50%;
+        gap: 0.3rem;
+
+        .contacto {
+          .contacto ul {
+            .contacto li {
+              list-style: none;
+            }
           }
         }
       }
     }
+  }
+  .ubicacion {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    h3 {
+      margin-left: 1rem;
+      text-align: left;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: nth($list: $colores, $n: 1);
+    }
 
-    .informacion {
+    .maps {
       display: flex;
-      @include flex(column, center, center);
-      text-align: center;
-      margin: 5rem 1rem 0 5rem;
-
-      ul {
-        list-style: none;
-        padding: 1rem 0 0.5rem 0;
-
-        li {
-          display: flex;
-          align-items: center;
-          font-size: 1rem;
-          margin-bottom: 10px;
-
-          iconify-icon {
-            margin-right: 10px;
-            font-size: 1.5rem;
-            color: nth($list: $colores, $n: 1);
-          }
-        }
-      }
-    }
-
-    .ubicacion {
-      h3 {
-        margin-left: 1rem;
-        text-align: left;
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: nth($list: $colores, $n: 1);
-      }
-
-      .maps {
-        width: 100%;
-        height: auto;
-        box-shadow: 0px 0px 30px 0px rgb(175, 175, 180);
-        margin-bottom: 2rem;
-        margin-top: 1rem;
-      }
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: auto;
+      box-shadow: 0px 0px 30px 0px rgb(175, 175, 180);
+      margin-bottom: 2rem;
+      margin-top: 1rem;
     }
   }
 }
